--- a/Yr13 Project/Flask/templates/login.html
+++ b/Yr13 Project/Flask/templates/login.html
@@ -54,6 +54,7 @@
             <p>
               <button type="submit" id="SubmitButton" value="Submit">Log In</button>
             </p>
+          <body onload="reset"></body>
         </form>
       </ul>
     </div>
